# benchmark-dashboard

./: .gitignore  credits.md  main.py  output.json  py3.json  pyproject.toml  speedtest.py
helpers/: aws.json  oci.json  put_result.py  setup.sh
