[tool.poetry]
name = "benchmark-dashboard"
version = "0.1.0"
description = ""
authors = ["Lee-Roy King <leeroywking@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
